# kbot_vr_teleop

./: .gitignore  README.md  TRACKING_MODES.md  camera_stream.py  gstreamer.py  hand_inverse_kinematics.py  kbot_arm_convex_hull.csv  main.py  notes.md  package-lock.json  pyproject.toml  requirements.txt  setup_gst.sh  stream_recv.py  udp_conn.py
frontend/: package.json  tsconfig.json
frontend/public/: index.html  manifest.json  robot.urdf
frontend/src/: App.tsx  BrowserView.tsx  SideBySideVideo.tsx  URDFViewer.tsx  Video.tsx  WebXR.tsx
https-proxy/: cert-key.pem  cert.pem  https-proxy.js  package-lock.json  run.sh  setup.md
isaac/: env.py  isaac_camera.py
kinfer_policies/: dummy_no_grippers.kinfer  dummy_with_grippers.kinfer
rerun/: .gitignore  test_udp_sender.py  visualizer.py
src/: arm_inverse_kinematics.py  camera_stream.py  from_rerun_data.py  hand_inverse_kinematics.py  ik_helpers.py  main.py  profile_output.lprof  profile_output_2025-08-23T063027.txt  profile_output_2025-08-23T063358.txt  profile_output_2025-08-23T063621.txt  profile_output_2025-08-26T015629.txt  profile_output_2025-08-26T022007.txt  test_joint_positions.py  test_on_data.py  udp_conn.py  util.py  visualizer.py
src/analysis/: from_rerun_data.py  wrist_translated_to_head.rrd
src/kscale_vr_teleop/: __init__.py  _assets.py  arm_inverse_kinematics.py  command_conn.py  controller_teleop_core.py  controller_tracking_handler.py  convert.py  finger_udp_listener.py  (+21 more)
src/kscale_vr_teleop.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
webxrtest/: package-lock.json  package.json  server.js
(+67 files in other folders)
