[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kscale_vr_teleop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax>=0.6.2",
    "jaxopt>=0.8.5",
    "line-profiler>=5.0.0",
    "lxml>=6.0.1",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "python-can>=4.6.1",
    "pyyaml>=6.0.2",
    "rerun-sdk>=0.24.1",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
    "trimesh>=4.8.1",
    "websockets>=15.0.1",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["kscale_vr_teleop*"]
